# reducto-python-sdk

./: .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.md  mypy.ini  pyproject.toml  renovate.json
.github/workflows/: ci.yml  e2e.yml  mintlify.yml  publish-pypi.yml  publish-shim-pypi.yml  release-doctor.yml
docs/rca/: pylon-8891-rca.tex
reducto-shim/: README.md  pyproject.toml
scripts/: lint
scripts/utils/: upload-artifact.sh
src/reducto/: __init__.py  _base_client.py  _client.py  _constants.py  _files.py  _models.py  _response.py  _streaming.py  _types.py  _version.py
src/reducto/_utils/: _resources_proxy.py
src/reducto/lib/: __init__.py  bulk.py  (+2 more)
src/reductoai/: __init__.py  _base_client.py  _client.py  _exceptions.py  _files.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py
tests/: conftest.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_models.py  test_pylon_8891_v3_async_union.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  utils.py
tests/api_resources/: test_cancel.py  test_classify.py  test_client.py  test_configure_webhook.py  test_edit.py  test_edit_async.py  test_extract.py  test_extract_async.py  test_job.py  test_jobs.py  test_parse.py  test_parse_async.py  test_pipeline.py  test_pipeline_async.py  test_split.py  test_split_async.py  test_upload.py  test_version.py  test_webhook.py
tests/e2e/: test_sdk_e2e.py
tests/test_utils/: test_datetime_parse.py  test_json.py  test_path.py  test_proxy.py  test_typing.py
(+209 files in other folders)
